# reactos

./: .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt
.github/: reviewdog.yml
.github/workflows/: build.yml
base/services/dhcpcsvc/: CMakeLists.txt
base/services/nfsd/: CMakeLists.txt
base/services/svchost/: CMakeLists.txt
base/setup/lib/: CMakeLists.txt
base/setup/usetup/: CMakeLists.txt
base/system/autochk/: CMakeLists.txt
base/system/smss/: CMakeLists.txt  smloop.c
boot/environ/: CMakeLists.txt
boot/freeldr/freeldr/: CMakeLists.txt  arcname.c
boot/freeldr/freeldr/lib/mm/: meminit.c
boot/freeldr/freeldr/ntldr/: winldr.c
dll/apisets/: CMakeLists.txt  CMakeLists.txt.in  api-ms-win-crt-string-l1-1-0.spec
dll/appcompat/apphelp/: CMakeLists.txt
dll/appcompat/shims/genral/: CMakeLists.txt
dll/appcompat/shims/layer/: CMakeLists.txt
dll/appcompat/shims/shimlib/: CMakeLists.txt
dll/ntdll/: CMakeLists.txt
dll/ntdll/def/: ntdll.spec  ntdll_crt.spec
dll/opengl/mesa/: CMakeLists.txt  api.c  vbxform.c
dll/win32/advapi32/: CMakeLists.txt
dll/win32/advapi32_vista/: CMakeLists.txt
dll/win32/browseui/shellbars/: CMakeLists.txt
dll/win32/browseui/shellfind/: CMakeLists.txt
dll/win32/cabinet/: fdi.c
dll/win32/fmifs/: CMakeLists.txt
dll/win32/fusion/: CMakeLists.txt
dll/win32/kernel32/: CMakeLists.txt
dll/win32/kernel32/client/file/: mntpoint.c
dll/win32/kernel32/kernel32_vista/: CMakeLists.txt
dll/win32/msv1_0/: CMakeLists.txt
dll/win32/msvcrt/: CMakeLists.txt
dll/win32/shell32/shelldesktop/: CMakeLists.txt
dll/win32/shell32/shellmenu/: CMakeLists.txt
dll/win32/shell32/shellrecyclebin/: CMakeLists.txt
dll/win32/smdll/: CMakeLists.txt
dll/win32/ubtrfs/: CMakeLists.txt
dll/win32/uext2/: CMakeLists.txt
dll/win32/ufat/: CMakeLists.txt
dll/win32/ufatx/: CMakeLists.txt
dll/win32/verifier/: CMakeLists.txt
dll/win32/wlnotify/: CMakeLists.txt
drivers/base/kdgdb/: CMakeLists.txt
drivers/base/kdrosdbg/: CMakeLists.txt
drivers/bus/acpi/: CMakeLists.txt
drivers/filesystems/cdfs/: CMakeLists.txt
drivers/filesystems/ext2/: CMakeLists.txt
drivers/filesystems/fastfat_new/: CMakeLists.txt
drivers/filesystems/ffs/: CMakeLists.txt
drivers/filesystems/nfs/: CMakeLists.txt
drivers/filesystems/reiserfs/: CMakeLists.txt
drivers/network/tcpip/include/: tcpip.h
drivers/storage/class/cdrom_new/: CMakeLists.txt
drivers/storage/class/classpnp/: CMakeLists.txt
drivers/storage/class/disk_new/: CMakeLists.txt
drivers/storage/mountmgr/: CMakeLists.txt
drivers/wdm/audio/hdaudbus/: CMakeLists.txt
drivers/wdm/audio/sysaudio/: CMakeLists.txt
hal/halx86/: CMakeLists.txt
hal/halx86/include/: bus.h
hal/halx86/legacy/: bussupp.c
media/doc/: README.WINE
modules/rostests/apitests/dciman32/: CMakeLists.txt
modules/rostests/apitests/opengl32/: CMakeLists.txt  sw_teximage.c  testlist.c
modules/rostests/apitests/win32nt/: CMakeLists.txt
modules/rostests/kmtests/: CMakeLists.txt
modules/rostests/tests/mmixer_test/: CMakeLists.txt
ntoskrnl/: CMakeLists.txt  ntos.cmake
ntoskrnl/cc/: copy.c
ntoskrnl/include/internal/: ke.h  mm.h
ntoskrnl/include/internal/i386/: ke.h  mm.h
ntoskrnl/io/iomgr/: iofunc.c
ntoskrnl/io/pnpmgr/: pnpmgr.c
ntoskrnl/kdbg/: kdb_cli.c
ntoskrnl/ke/: krnlinit.c
ntoskrnl/ke/i386/: kiinit.c  patpge.c  thrdini.c
ntoskrnl/mm/: balance.c  freelist.c  marea.c  section.c
ntoskrnl/mm/ARM3/: expool.c  miarm.h  mminit.c  pagfault.c  pfnlist.c  pool.c  procsup.c  section.c  session.c  sysldr.c  virtual.c  wslist.c  wslist.cpp
ntoskrnl/mm/ARM3/i386/: init.c
ntoskrnl/mm/i386/: page.c
ntoskrnl/ntkrnlmp/: CMakeLists.txt
ntoskrnl/ps/: psmgr.c
ntoskrnl/vdm/: vdmmain.c
sdk/cmake/: CMakeMacros.cmake  gcc.cmake  msvc.cmake
sdk/include/crt/: _dummy.h  _mingw.h  assert.h  complex.h  crtdefs.h  ctype.h  errno.h  fenv.h  float.h  math.h  stdio.h  wchar.h  wctype.h
sdk/include/crt/mingw32/: intrin_x86.h
sdk/include/crt/msvcrt/: _assert.h  _complex.h  _ctype.h  _errno.h  _fenv.h  _float.h  _wctype.h
sdk/include/crt/nt/: _assert.h  _complex.h  _ctype.h  _errno.h  _fenv.h  _float.h  _wctype.h
sdk/include/ndk/: haltypes.h  kefuncs.h  mmtypes.h
sdk/include/psdk/: guiddef.h  hidpi.h
sdk/lib/: CMakeLists.txt
sdk/lib/cmlib/: CMakeLists.txt  HvGetCell.c  HvInitialize.c  cmfindsubkey.c  cmindex.c  cminit.c  cmlib_private.h  cmname.c  cmprepare.c  cmvalue.c  compareindex.c  comparename.c  compressedname.c  create.c  flathive.c  free.c  freecell.c  hashkey.c  hivecell.c  hivefree.c  hiveload.c  memhive.c  trace.c  valuedata.c  valuename.c  verify.c
sdk/lib/crt/: CMakeLists.txt  libcntpr.cmake  msvcrtex.cmake  oldnames.cmake
sdk/lib/crt/math/i386/: ldexp.c
sdk/lib/crt/mbstring/: islead.c
sdk/lib/crt/printf/: streamout.c
sdk/lib/crt/startup/: crtexe.c  pesect.c
sdk/lib/crt/string/: scanf.h  wcs.c
sdk/lib/fslib/vfatlib/: CMakeLists.txt
sdk/lib/gcc_ubsan/: CMakeLists.txt  add_overflow.c  builtin_unreachable.c  cplusplus.c  divrem_overflow.c  invalid_builtin.c  load_invalid_value.c  mul_overflow.c  negate_overflow.c  nonnull_arg.c  out_of_bounds.c  pointer_overflow.c  shift_out_of_bounds.c  sub_overflow.c  type_mismatch_v1.c  ubsan.h
sdk/lib/inflib/: CMakeLists.txt
sdk/lib/pseh/: CMakeLists.txt
sdk/lib/rtl/: CMakeLists.txt  bitmap.c  dos8dot3.c  heap.c  heap.h  network.c  unicode.c
sdk/tools/: pefixup.c
subsystems/win/basesrv/: CMakeLists.txt
subsystems/win32/csrsrv/: CMakeLists.txt  api.c  session.c
win32ss/: CMakeLists.txt  pch.h
win32ss/drivers/miniport/vbe/: edid.c  vbemp.h
win32ss/gdi/dib/: dib.c  dib1bpp.c
win32ss/gdi/eng/: floatobj.h
win32ss/gdi/gdi32/: CMakeLists.txt
win32ss/gdi/gdi32/misc/: misc.c
win32ss/gdi/gdi32/wine/: CMakeLists.txt
win32ss/gdi/ntgdi/: arc.c  baseobj.hpp  brush.cpp  brush.hpp  dibobj.c  freetype.c  gdidbg.c  gdikdbgext.c  palette.c  palette.h
win32ss/include/: ntgdihdl.h
win32ss/user/ntuser/: desktop.c  display.c  misc.c  sysparams.c  userfuncs.h  winsta.c
win32ss/user/user32/: CMakeLists.txt
(+5 files in other folders)
